--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 /* main styling starts here */
-main{
+/* main{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -37,15 +37,22 @@ main{
     flex-direction: column;
     background-color: var(--primary-green-light);
     font-family: var(--font-karla);
+} */
+
+body{
+    background-color: var(--primary-green-light);
+    font-family: var(--font-karla);
 }
 
 #main-form{
-    /* width: 36rem; */
+    width:fit-content;
     background-color: var(--neutral-white);
     border-radius: 0.8rem;
-    overflow: hidden;
     padding: 2rem;
     z-index: 100;
+    margin: 0% auto;
+    margin-top: 50%;
+    translate: 0% -50%;
 }
 .container{
     width: 100%;
