--- a/responsive.css
+++ b/responsive.css
@@ -1,13 +1,26 @@
-@media  (max-width:425px) {
-    body{
-        height: 100%;
-    }
-    .name-container{
-        flex-direction: column;
-        gap: 1rem;
-    }
-    textarea{
-        min-width: 100%;
-    }
+@media (max-width: 425px) {
+  body {
+    height: 100%;
+  }
+  .name-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  textarea {
+    min-width: 100%;
+  }
+  .successtoster {
+    transform: translate(10%);
+  }
+}
 
+@media (max-width: 375px) {
+  .successtoster {
+    width: 310px;
+  }
+}
+@media (max-width: 320px) {
+  .successtoster {
+    width: 270px;
+  }
 }
